fixed edit buttons color and fixed buttons not showing

--- a/src/app/edit-icons/edit-icons.component.scss
+++ b/src/app/edit-icons/edit-icons.component.scss
@@ -31,7 +31,7 @@
   .isActive{
     width: 40px;
     height: 40px;
-    border: 2px solid #FFA800;
+    border: 2px solid #E0030C;
     border-radius: 20px;
   }
 
